[UIFC-468] Refactor Verticles to plain service classes
Replace Verticle-based implementations with plain service classes:
- EZBHarvestVerticle -> EZBHarvestService
- AbstractSelectMetadataSourceVerticle -> AbstractSelectMetadataSourceService
- SelectMetadataSourceVerticle -> SelectMetadataSourceService
- UnselectMetadataSourceVerticle -> UnselectMetadataSourceService
- SelectMetadataSourceVerticleFactory -> SelectMetadataSourceServiceFactory